--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.1.3506-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 28 Dec 2013 07:49:49 +0100
+
 liquidwar6 (0.1.3505-0vendor) unstable; urgency=medium
 
   * Bump version
