Trying to find what's wrong in dat test suite

--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,15 @@
+liquidwar6 (0.1.3508-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 28 Dec 2013 08:27:29 +0100
+
+liquidwar6 (0.1.3507-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 28 Dec 2013 08:07:11 +0100
+
 liquidwar6 (0.1.3506-0vendor) unstable; urgency=medium
 
   * Bump version
