--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,21 @@
+liquidwar6 (0.1.3513-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 28 Dec 2013 18:50:54 +0100
+
+liquidwar6 (0.1.3512-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 28 Dec 2013 16:34:13 +0100
+
+liquidwar6 (0.1.3511-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 28 Dec 2013 16:13:48 +0100
+
 liquidwar6 (0.1.3510-0vendor) unstable; urgency=medium
 
   * Bump version
