--- a/liquidwar6/NEWS
+++ b/liquidwar6/NEWS
@@ -1,5 +1,9 @@
 Liquid War NEWS -- history of user-visible changes.
 
+* January 2014: release of 0.2.3550. Features a new libcaca
+  graphical backend hacked by Epitech students, also comes
+  with a load of bugfixes.
+
 * December 2011: release of 0.0.13beta. Major improvements
   include help, tooltips and breadcrumbs displayed within the
   menus. The network remote node detection is enabled by default,
