--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,6 +1,6 @@
-liquidwar6 (0.1.3551-0vendor) unstable; urgency=medium
+liquidwar6 (0.2.3551-0vendor) unstable; urgency=medium
 
-  * Bump version
+  * Release of 0.2.3551.
 
  -- Christian Mauduit <ufoot@ufoot.org>  Sat, 04 Jan 2014 18:15:23 +0100
 
