--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.3.3555-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sun, 05 Jan 2014 08:51:54 +0100
+
 liquidwar6-extra-maps (0.2.3551-0vendor) unstable; urgency=medium
 
   * Release of 0.2.3551.
