--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -381,6 +381,8 @@ as the revision number (the version 3rd number).
 2011-12-24 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.13beta/,0.0.13beta}, codename ``Blackbeard'', stamp 2950
 @item
 2014-01-04 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.2.3551/,0.2.3551}, codename ``Davy Crockett''
+@item
+2014-MM-DD : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.4.NNNN/,0.4.NNNN}, codename ``Hannibal''
 @end itemize
 
 @subsection Road map
