--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -249,9 +249,9 @@ It is designed so that graphics, sound, network and bot backends can be hacked
 at will. It has a complete self-test suite, many debugging built-in tools,
 and is regularly checked with automated tools. For instance, you can check
 reports concerning
-@uref{http://www.gnu.org/software/liquidwar6/global/, global references},
-@uref{http://www.gnu.org/software/liquidwar6/coverage/, code coverage} and
-@uref{http://www.gnu.org/software/liquidwar6/cyclo/, cyclomatic complexity}.
+@uref{http://www.ufoot.org/liquidwar/v6/doc/global/, global references},
+@uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/, code coverage} and
+@uref{http://www.ufoot.org/liquidwar/v6/doc/cyclo/, cyclomatic complexity}.
 This is not a quick hack.
 @item
 Documentation. Yes, you're reading it.
@@ -915,7 +915,7 @@ parts of it take most of the CPU power to execute.
 Gives nice output about code coverage.
 
 @item
-@uref{http://www.gnu.org/software/liquidwar6/global/, GNU global}.
+@uref{http://www.ufoot.org/liquidwar/v6/doc/global/, GNU global}.
 Shows global references through the code.
 
 @item
@@ -3078,9 +3078,9 @@ and @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov}.
 This is for developpers only. It will activate @code{--enable-allinone},
 else there would be some link errors when opening dynamic libraries.
 The obtained information is available online:
-@uref{http://www.gnu.org/software/liquidwar6/coverage/, coverage}.
+@uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/, coverage}.
 and
-@uref{http://www.gnu.org/software/liquidwar6/global/, GNU global}.
+@uref{http://www.ufoot.org/liquidwar/v6/doc/global/, GNU global}.
 @item
 @code{--enable-valgrind}: will enable some @code{CFLAGS}
 options which are suitable for the use of
@@ -3832,12 +3832,12 @@ tests when new features and/or bug-fixes pour in.
 @uref{http://ltp.sourceforge.net/coverage/lcov.php, lcov} is run,
 ideally with each release - but it's not garanteed, check the output date and time -
 and the output is available online on
-@uref{http://www.gnu.org/software/liquidwar6/coverage/}.
+@uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/}.
 @item
 @uref{http://www.gnu.org/software/global/, GNU global} is run too, ideally
 with each release - again, check the output date and time -
 and the output is available online on
-@uref{http://www.gnu.org/software/liquidwar6/global/}.
+@uref{http://www.ufoot.org/liquidwar/v6/doc/global/}.
 @item
 @uref{http://parisc-linux.org/~bame/pmccabe/, pmccabe} reports cyclomatic
 complexity. It shows where the code is too complex and should probably be
@@ -3845,7 +3845,7 @@ rewritten. Output is post-processed
 using @uref{http://www.gnu.org/software/gnulib/MODULES.html#module=pmccabe2html, pmccabe2html}
 from @uref{http://www.gnu.org/software/gnulib/, gnulib}. The output
 is available online on
-@uref{http://www.gnu.org/software/liquidwar6/cyclo/}.
+@uref{http://www.ufoot.org/liquidwar/v6/doc/cyclo/}.
 @item
 @uref{http://valgrind.org/, Valgrind} is run as well, it should report
 absolutely no leak on all the core sub-libraries, eg running
@@ -5002,19 +5002,19 @@ giving informations on all the internal and public C interfaces:
 
 @itemize
 @item
-@uref{http://www.gnu.org/software/liquidwar6/coverage/}:
+@uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/}:
 the @uref{http://ltp.sourceforge.net/coverage/lcov.php, lcov} output when running @code{./liquidwar6 --test}.
 It shows what functions are actually tested, and how many times they are called.
 @item
-@uref{http://www.gnu.org/software/liquidwar6/global/}:
+@uref{http://www.ufoot.org/liquidwar/v6/doc/global/}:
 the @uref{http://www.gnu.org/software/global/, GNU global} output gives complete cross-references,
 macros, headers, contants declaration. It's a very good place to start browsing the code.
 @item
-@uref{http://www.gnu.org/software/liquidwar6/cyclo/}:
+@uref{http://www.ufoot.org/liquidwar/v6/doc/cyclo/}:
 the @uref{http://parisc-linux.org/~bame/pmccabe/, pmccabe} output shows the cyclomatic complexity
 of functions. It enables the programmer to spots the ``ugly'' and dangerous parts of the program.
 @item
-@uref{http://www.gnu.org/software/liquidwar6/doxygen/}:
+@uref{http://www.ufoot.org/liquidwar/v6/doc/doxygen/}:
 the @uref{http://www.stack.nl/~dimitri/doxygen/, Doxygen} documentation gives an interactive
 access to the code, the structures and functions, and their dependencies.
 @end itemize
@@ -5081,7 +5081,7 @@ access to the code, the structures and functions, and their dependencies.
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/index.html}.
 
 @subsection API
 
@@ -5109,7 +5109,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/bot/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/bot/index.html}.
 
 @subsection API
 
@@ -5139,7 +5139,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/bot/mod-brute/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/bot/mod-brute/index.html}.
 
 @subsection API
 
@@ -5169,7 +5169,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/bot/mod-follow/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/bot/mod-follow/index.html}.
 
 @subsection API
 
@@ -5199,7 +5199,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/bot/mod-idiot/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/bot/mod-idiot/index.html}.
 
 @subsection API
 
@@ -5229,7 +5229,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/bot/mod-random/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/bot/mod-random/index.html}.
 
 @subsection API
 
@@ -5259,7 +5259,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/cfg/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/cfg/index.html}.
 
 @subsection API
 
@@ -5290,7 +5290,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/cli/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/cli/index.html}.
 
 @subsection API
 
@@ -5320,7 +5320,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/cli/mod-http/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/cli/mod-http/index.html}.
 
 @subsection API
 
@@ -5350,7 +5350,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/cli/mod-tcp/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/cli/mod-tcp/index.html}.
 
 @subsection API
 
@@ -5380,7 +5380,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/cli/mod-udp/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/cli/mod-udp/index.html}.
 
 @subsection API
 
@@ -5410,7 +5410,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/cns/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/cns/index.html}.
 
 @subsection API
 
@@ -5440,7 +5440,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/cnx/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/cnx/index.html}.
 
 @subsection API
 
@@ -5470,7 +5470,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/dat/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/dat/index.html}.
 
 @subsection API
 
@@ -5513,7 +5513,7 @@ There are no functions in @code{libdef}, only a header file with constants.
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/dsp/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/dsp/index.html}.
 
 @subsection API
 
@@ -5543,7 +5543,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/dyn/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/dyn/index.html}.
 
 @subsection API
 
@@ -5573,7 +5573,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/gen/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/gen/index.html}.
 
 @subsection API
 
@@ -5603,7 +5603,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/gfx/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/gfx/index.html}.
 
 @subsection API
 
@@ -5633,9 +5633,9 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/gfx/mod-gl1/gl-utils/index.html} 
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/gfx/mod-gl1/gl-utils/index.html} 
 (as there are many sub-directories in this module, please refer to the 
-@uref{http://www.gnu.org/software/liquidwar6/coverage/index.html, test coverage directory index} for complete information).
+@uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/index.html, test coverage directory index} for complete information).
 
 @subsection API
 
@@ -5665,9 +5665,9 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/gfx/mod-gles2/index.html} 
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/gfx/mod-gles2/index.html} 
 (as there are many sub-directories in this module, please refer to the 
-@uref{http://www.gnu.org/software/liquidwar6/coverage/index.html, test coverage directory index} for complete information).
+@uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/index.html, test coverage directory index} for complete information).
 
 @subsection API
 
@@ -5697,9 +5697,9 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/gfx/mod-soft/index.html} 
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/gfx/mod-soft/index.html} 
 (as there are many sub-directories in this module, please refer to the 
-@uref{http://www.gnu.org/software/liquidwar6/coverage/index.html, test coverage directory index} for complete information).
+@uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/index.html, test coverage directory index} for complete information).
 
 @subsection API
 
@@ -5729,9 +5729,9 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/gfx/shared-sdl/index.html} 
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/gfx/shared-sdl/index.html} 
 (as there are many sub-directories in this module, please refer to the 
-@uref{http://www.gnu.org/software/liquidwar6/coverage/index.html, test coverage directory index} for complete information).
+@uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/index.html, test coverage directory index} for complete information).
 
 @subsection API
 
@@ -5761,9 +5761,9 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/gfx/mod-caca/index.html} 
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/gfx/mod-caca/index.html} 
 (as there are many sub-directories in this module, please refer to the 
-@uref{http://www.gnu.org/software/liquidwar6/coverage/index.html, test coverage directory index} for complete information).
+@uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/index.html, test coverage directory index} for complete information).
 
 @subsection API
 
@@ -5793,7 +5793,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/glb/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/glb/index.html}.
 
 @subsection API
 
@@ -5823,7 +5823,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/gui/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/gui/index.html}.
 
 @subsection API
 
@@ -5853,7 +5853,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/hlp/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/hlp/index.html}.
 
 @subsection API
 
@@ -5883,7 +5883,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/img/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/img/index.html}.
 
 @subsection API
 
@@ -5913,7 +5913,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/ker/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/ker/index.html}.
 
 @subsection API
 
@@ -5943,7 +5943,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/ldr/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/ldr/index.html}.
 
 @subsection API
 
@@ -5973,7 +5973,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/map/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/map/index.html}.
 
 @subsection API
 
@@ -6003,7 +6003,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/mat/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/mat/index.html}.
 
 @subsection API
 
@@ -6033,7 +6033,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/msg/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/msg/index.html}.
 
 @subsection API
 
@@ -6063,7 +6063,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/net/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/net/index.html}.
 
 @subsection API
 
@@ -6093,7 +6093,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/nod/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/nod/index.html}.
 
 @subsection API
 
@@ -6123,7 +6123,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/p2p/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/p2p/index.html}.
 
 @subsection API
 
@@ -6153,7 +6153,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/pil/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/pil/index.html}.
 
 @subsection API
 
@@ -6183,7 +6183,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/scm/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/scm/index.html}.
 
 @subsection API
 
@@ -6213,7 +6213,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/sim/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/sim/index.html}.
 
 @subsection API
 
@@ -6243,7 +6243,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/snd/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/snd/index.html}.
 
 @subsection API
 
@@ -6273,7 +6273,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/snd/mod-csound/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/snd/mod-csound/index.html}.
 
 @subsection API
 
@@ -6303,7 +6303,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/snd/mod-ogg/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/snd/mod-ogg/index.html}.
 
 @subsection API
 
@@ -6333,7 +6333,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/srv/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/srv/index.html}.
 
 @subsection API
 
@@ -6363,7 +6363,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/srv/mod-httpd/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/srv/mod-httpd/index.html}.
 
 @subsection API
 
@@ -6393,7 +6393,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/srv/mod-tcpd/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/srv/mod-tcpd/index.html}.
 
 @subsection API
 
@@ -6423,7 +6423,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/srv/mod-udpd/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/srv/mod-udpd/index.html}.
 
 @subsection API
 
@@ -6453,7 +6453,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/sys/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/sys/index.html}.
 
 @subsection API
 
@@ -6483,7 +6483,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/tsk/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/tsk/index.html}.
 
 @subsection API
 
@@ -6513,7 +6513,7 @@ Online @uref{http://josefsson.org/gdoc/,gdoc} reference available on
 @subsection Overview
 
 View @uref{http://ltp.sourceforge.net/coverage/lcov.php,lcov} test coverage results 
-on @uref{http://www.gnu.org/software/liquidwar6/coverage/src/lib/vox/index.html}.
+on @uref{http://www.ufoot.org/liquidwar/v6/doc/coverage/src/lib/vox/index.html}.
 
 @subsection API
 
